--- a/MegaSolution/Sequance/Sequance.csproj
+++ b/MegaSolution/Sequance/Sequance.csproj
@@ -34,6 +34,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EntryPoint.cs" />
     <Compile Include="UndecreasingSequance.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
