1)Strings are made const. 2)Input class added. 3)Only 2 exceptions are caught. 4)Made method of input not to return null. 5)Made a check if user entered a number but not a sequence.

--- a/MegaSolution/Sequance/Sequance.csproj
+++ b/MegaSolution/Sequance/Sequance.csproj
@@ -35,6 +35,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EntryPoint.cs" />
+    <Compile Include="Inputer.cs" />
     <Compile Include="UndecreasingSequance.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
