--- a/MegaSolution/Transliteration/Transliteration.csproj
+++ b/MegaSolution/Transliteration/Transliteration.csproj
@@ -34,6 +34,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DictionaryCodes.cs" />
     <Compile Include="EntryPoint.cs" />
     <Compile Include="DownloadOfTrasliterationRules.cs" />
     <Compile Include="Transliterator.cs" />
